Added all functionalities except editing appointment

--- a/Source Code/Appointment App/app/src/main/res/values/strings.xml
+++ b/Source Code/Appointment App/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="text_age">Patient Age</string>
     <string name="text_reason">Reason of Appointment</string>
     <string name="text_date">Date of Appointment</string>
+    <string name="text_address">Home Address</string>
 </resources>
